# mergenX

./: .env.example  .gitignore  Makefile  README.md  file_tree.md  pyproject.toml  setup-dev.ps1  setup-dev.sh
apps/: __init__.py
apps/api/: main.py
apps/api/v1/: search.py  tenants.py
apps/api/v1/endpoints/: search.py  tenants.py
apps/dashboard/: app.py
core/: README.md  config.py  database.py  models.py  security.py  usage_example.py
data_pipeline/: price_updater.py  sync_hotels.py
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  SETUP.md  SHELL_COMMANDS.md  file_tree.md
examples/: usage_examples.py
infra/: Dockerfile  Dockerfile.postgres  docker-compose.dev.yml  docker-compose.yml  postgres-init.sql
infra/postgres-init.sql/: 01-install-pgvector.sh
migrations/: env.py
migrations/versions/: b171dc25c453_init_db_schema.py
scripts/: __init__.py  get_tenant.py  migrate_and_update_embeddings.py  seed_db.py  seed_real_hotels.py  update_embeddings.py
services/ai/: __init__.py  embeddings.py  llm.py
services/engine/: __init__.py
services/geo/: __init__.py
services/providers/: __init__.py
tests/: conftest.py  test_api.py
